--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 	<a href="/board/list">게시판 이동</a>
-	<a href="/users/login">로그인</a>
-	<a href="/users/join">회원가입</a>
-	<a href="/users/logout">로그아웃</a>
+	<a href="/login">로그인</a>
+	<a href="/join">회원가입</a>
+	<a href="/logout">로그아웃</a>
+	<a href="/oauth2/authorization/google">구글 로그인</a>
 	소유 권한 : <span sec:authentication="authorities"></span>
 </body>
 </html>
