--- a/src/main/resources/templates/users/join.html
+++ b/src/main/resources/templates/users/join.html
@@ -5,13 +5,13 @@
 <title>회원가입</title>
 </head>
 <body>
-	<form method="post" th:action="@{/users/joinDo}">
-		아이디 <input type="text" name="usersid"/>
+	<form method="post" th:action="@{/joinDo}">
+		아이디 <input type="text" name="username"/>
 		비번 <input type="password" name="userspw"/>
 		닉네임 <input type="text" name="usersnickname"/>
 		이메일 <input type="text" name="usersemail"/>
-		<input type="radio" name="auth" value="ROLE_ADMIN,ROLE_USER"> admin
-      	<input type="radio" name="auth" value="ROLE_USER" checked="checked"> user <br>
+		<input type="radio" name="role" value="ROLE_ADMIN"> admin
+      	<input type="radio" name="role" value="ROLE_USER" checked="checked"> user <br>
 		<input type="submit" value="가입"/>
 	</form>
 </body>
