--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -5,7 +5,7 @@
 <title>로그인</title>
 </head>
 <body>
-	<form th:action="@{/users/loginDo}" method="post">
+	<form th:action="@{/loginDo}" method="post">
 		<span>아이디 : </span><input type="text" name="username"/>
 		<span>비밀번호 : </span><input type="password" name="password"/>
 		<input type="submit" value="로그인"/>
