--- a/src/main/resources/templates/users/loginNickname.html
+++ b/src/main/resources/templates/users/loginNickname.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>설정</title>
+<title>★SPACE★</title>
 <style type="text/css">
 	.pTag{
 	  color: purple;
