--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>인덱스</title>
+<title>★SPACE★</title>
 </head>
 <body>
 	<a href="/board/list">게시판 이동</a>
+	<a href="/board/write">새글작성</a>	
 	<a href="/logout">로그아웃</a>
 	<a href="/oauth2/authorization/google">구글 로그인</a>
 	<a href="/oauth2/authorization/kakao">카카오 로그인</a>
 	<a href="/oauth2/authorization/naver">네이버 로그인</a>
-	소유 권한 : <span sec:authentication="authorities"></span>
 </body>
 </html>
