--- a/src/main/resources/templates/users/loginSkill.html
+++ b/src/main/resources/templates/users/loginSkill.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>설정</title>
+<title>★SPACE★</title>
 <link rel="stylesheet" href="../css/users/loginSkill.css">
 </head>
 <body>
