--- a/src/main/resources/templates/users/loginSkill.html
+++ b/src/main/resources/templates/users/loginSkill.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>★SPACE★</title>
 <link rel="stylesheet" href="../css/users/loginSkill.css">
+<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 	<form th:action="@{/loginFinish}" method="post" th:object="${users}">
