--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>★SPACE★</title>
+<link rel="stylesheet" href="../css/main.css">
+<link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+	<div th:replace="~{header :: header}"></div>
 	<a href="/board/list">게시판 이동</a>
 	<a href="/board/write">새글작성</a>	
 	<a href="/logout">로그아웃</a>
 	<a href="/oauth2/authorization/google">구글 로그인</a>
 	<a href="/oauth2/authorization/kakao">카카오 로그인</a>
 	<a href="/oauth2/authorization/naver">네이버 로그인</a>
+	
+	
+	
 </body>
 </html>
