FEAT : header 파일 추가

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -10,7 +10,7 @@
 			<img src="../images/spaceLogoText.PNG">
 		</div>
 		<div class="rightBox">
-			<span>게시글 쓰기</span>
+			<a href="/board/write">게시글 작성</a>
 		</div>
 	</header>
 </body>
