--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -10,7 +10,11 @@
 			<img src="../images/spaceLogoText.PNG">
 		</div>
 		<div class="rightBox">
+			<div th:if="${session.users != null}">
+				로그인중임
+			</div>
 			<a href="/board/write">게시글 작성</a>
+			<a href="/login">로그인</a>
 		</div>
 	</header>
 </body>
