--- a/src/main/resources/templates/users/loginSkill.html
+++ b/src/main/resources/templates/users/loginSkill.html
@@ -21,7 +21,7 @@
 		<input type="hidden" th:field="*{Role}" name="Role"/>
 		<input type="hidden" th:field="*{provider}" name="provider"/>
 		<input type="hidden" th:field="*{providerid}" name="providerid"/>
-		<input type="submit" value="시작하기"/>
+		<input type="submit" value="다음"/>
 	</form>
 </body>
 <script src="../js/users/loginSkill.js"></script>
