--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,17 +5,45 @@
 <title>★SPACE★</title>
 <link rel="stylesheet" href="../css/main.css">
 <link rel="stylesheet" href="../css/index.css">
+<style>
+
+	
+</style>
 </head>
 <body>
 	<div th:replace="~{header :: header}"></div>
-	<a href="/board/list">게시판 이동</a>
-	<a href="/board/write">새글작성</a>	
-	<a href="/logout">로그아웃</a>
-	<a href="/oauth2/authorization/google">구글 로그인</a>
-	<a href="/oauth2/authorization/kakao">카카오 로그인</a>
-	<a href="/oauth2/authorization/naver">네이버 로그인</a>
+	<div>
+		<a href="/board/list">게시판 이동</a>
+		<a href="/logout">로그아웃</a>	
+	</div>
 	
-	
-	
+	  
+    
 </body>
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script>
+	
+	function checkNickName() {
+		let json = {"page":1};
+		$.ajax(
+			{
+				type:"POST",
+				url:"/board/list",
+				data:JSON.stringify(json),
+				contentType: "application/json",
+				success:function(result,status,xhr){
+					console.log(result);
+					if(result == "fail"){						
+						
+					}else{
+						
+					}
+				},
+				error:function(xhr,status,e){
+				}
+			}
+		)
+	}
+
+</script>
 </html>
