--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -74,86 +74,74 @@
 	background-color: white;
 	cursor: pointer;
 }
+
+.boardNull {
+	width: 300px;
+	margin: 0 auto;
+}
 </style>
 </head>
 <body>
 	
+	<div>
+		<div class="skillContainer">
+			<div th:each="val : ${skillList}" th:text="${val.skillname}" class="skillList choice"></div>
+		</div>
+		<div id="skillChoiceContainer"></div>
+		<div id="reset">필터 초기화</div>				
+	</div>	
+	
 	<h1>무한스크롤</h1>
     <section class="section"></section>
-	
-	
-		
-	<form action="/board/list" id="searchForm" method="get">
-		<div>
-			<div class="skillContainer">
-				<div th:each="val : ${skillList}" th:text="${val.skillname}" class="skillList choice"></div>
-			</div>
-			<div id="skillChoiceContainer"></div>
-			<div id="reset">필터 초기화</div>				
-		</div>
-		<input type="hidden" name="pageNum" th:value="1"/>
-		<input type="hidden" name="amount" th:value="${pageMaker.cri.amount}"/>
-	</form>
-	<div>
-		<th:block th:if="${pageMaker.prev}">
-			<a class="changePage" th:href="${pageMaker.startPage-1}"><code>&lt;</code></a>
-		</th:block>
-		<th:block th:each="page : ${pageMaker.pages}">
-			<th:block th:if="${pageMaker.cri.pageNum == page}">
-				<code th:text="${page}"></code>
-			</th:block>
-			<th:block th:unless="${pageMaker.cri.pageNum == page}">
-				<a class="changePage" th:href="${page}"><code th:text="${page}"></code></a>
-			</th:block>
-		</th:block>
-		<th:block th:if="${pageMaker.next}">
-			<a class="changePage" th:href="${pageMaker.endPage+1}"><code>&gt;</code></a>
-		</th:block>
-	</div>
-	<form id="pageForm" name="pageForm" action="/board/list" method="get">
-		<input type="hidden" name="pageNum" th:value="${pageMaker.cri.pageNum}">
-		<input type="hidden" name="amount" th:value="${pageMaker.cri.amount}"/>
-	</form>
 </body>
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script>
 
+// 스크롤 이벤트 발생시 1 증가 (페이지를 뜻함)
 let scrollCnt = 1;
+
+// 스크롤 이벤트 
 window.onscroll = function (e) {
     if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
       setTimeout(function () {
     	scrollCnt++;
-    	let boardItemTag = document.querySelector(".boardItem");
     	boardBoxScroll(scrollCnt, 30, selectArry);
       }, 1000);
     }
   };
 
+// 필터를 몇번 선택했는지 확인 (선택 횟수에 따라 html 태그 배치가 달라짐)
 let pageCnt = 0;
+
+// 선택된 필터 요소를 담아둘 리스트 선언
 let selectArry = [];
 
 function boardBoxScroll(pageNum, amount, selectArry) {
 	let json = {"pageNum":pageNum, "amount":amount, "selectArry":selectArry};
+	let boardItemTag = document.querySelector(".boardItem");
+	if(selectArry[0] == null) selectArry[0] = "nothing";
 	console.log("pageNum"+pageNum+"-------amount"+amount);
+	console.log("selectArry"+selectArry);
     $.ajax({
         type: "POST",
-        url: "/board/getList",
+        url: "/board/getScroll",
 		data:JSON.stringify(json),
 		contentType: "application/json"
     })
         .done(function (result) {
-            console.log(result);
+            console.log("결과 확인"+result);
+            $(".boardNull").remove();
+            $(".boardItem").append("<div class=boardScroll></div>");
+            $(".boardScroll").replaceWith(result);
             pageCnt++;
-            $(".section").append("<div class=hhhhhh></div>");
         })
         .fail(function(jqXHR) {
             console.log(jqXHR);
         })
         .always(function() {
-            console.log("요청, 응답 결과에 상관없이, 이건 항상 실행됩니다.");
+            console.log("스크롤 이벤트에 의한 ajax 실행");
         })
 }
-
 
 function boardBox(selectArry) {
 	let json = {"selectArry":selectArry};
@@ -165,14 +153,13 @@ function boardBox(selectArry) {
     })
         .done(function (result) {
             console.log(result);
-            console.log("리플레이스 되야함");
             if(pageCnt==0){   
-            	console.log("처음 클릭");
+            	console.log("처음 접속");
 	            $(".section").append("<div class=boardBox></div>");
 	            $(".boardBox").replaceWith(result);
 	            pageCnt++;
             } else {
-            	console.log("두번째 클릭");
+            	console.log("필터를 클릭");
             	$(".boardBlock").remove();
 	            $(".section").append("<div class=boardBox></div>");
 	            $(".boardBox").replaceWith(result);
@@ -182,29 +169,11 @@ function boardBox(selectArry) {
             console.log(jqXHR);
         })
         .always(function() {
-            console.log("요청, 응답 결과에 상관없이, 이건 항상 실행됩니다.");
+            console.log("boardBox ajax 실행");
         })
 }
 
 setTimeout(boardBox, 100);
-
-
-
-const searchForm = document.getElementById("searchForm");
-
-
-const pageForm = document.getElementById("pageForm");
-const changePage = document.querySelectorAll(".changePage");
-const pageFormPageNum = document.querySelector("#pageForm > input");
-
-for(let i=0; i<changePage.length; i++){
-	changePage[i].addEventListener("click", function(e){
-		e.preventDefault();
-		pageFormPageNum.value = changePage[i].getAttribute("href");
-		pageForm.submit();
-	})
-}
-
 
 let skillList = document.getElementsByClassName("skillList");
 let skillChoiceContainer = document.getElementById("skillChoiceContainer");
@@ -230,7 +199,7 @@ for(let i=0; i<skillList.length; i++){
 
 			// 서버에 데이터 전달
 			boardBox(selectArry);
-			scrollCnt = 0;
+			scrollCnt = 1;
 			
 		// 만약 선택된 요소에 choice 클래스가 포함되어 있지 않으면
 		} else if(!skillList[i].classList.contains("choice")){
@@ -242,7 +211,7 @@ for(let i=0; i<skillList.length; i++){
 			
 			// 서버에 데이터 전달
 			boardBox(selectArry);
-			scrollCnt = 0;
+			scrollCnt = 1;
 			
 		// 만약 선택된 요소에 choice 클래스가 포함되어 있다면 
 		} else if(skillList[i].classList.contains("choice")){
@@ -269,7 +238,7 @@ for(let i=0; i<skillList.length; i++){
 				// 만약 choice 클래스를 가진 요소가 있다면
 				} else {
 					boardBox(selectArry);
-					scrollCnt = 0;
+					scrollCnt = 1;
 					return;
 				}
 			}
@@ -288,7 +257,7 @@ for(let i=0; i<skillList.length; i++){
 				selectArry[0] = "nothing";
 				console.log("selectArry 값 서버에 보내기 전 확인해보기 : "+selectArry);
 				boardBox(selectArry);
-				scrollCnt = 0;
+				scrollCnt = 1;
 			}			
 		}
 	};
@@ -305,7 +274,7 @@ reset.addEventListener('click', function(){
 		skillList[i].className += " choice";
 	}
 	boardBox(selectArry);
-	scrollCnt = 0;
+	scrollCnt = 1;
 });
 </script>
 </html>
