--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -5,8 +5,10 @@
 <title>★SPACE★</title>
 <link rel="stylesheet" href="../css/board/boardView.css">
 <link rel="stylesheet" href="../css/main.css">
+<link rel="stylesheet" href="../css/header.css">
 </head>
 <body>
+	<div th:replace="~{header :: header}"></div>
 	<table>
 		<tr>
 			<th>작성자</th>
