--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -2,10 +2,13 @@
 
 .headerBox {
 	padding: 5px;
+	width: 80%;
 	height: 100px;
+	margin: 0 auto;
 }
 
 .leftBox {
+	cursor: pointer;
 	float: left;
 }
 
