--- a/src/main/resources/templates/board/boardWrite.html
+++ b/src/main/resources/templates/board/boardWrite.html
@@ -3,69 +3,94 @@
 <head>
 <meta charset="UTF-8">
 <title>★SPACE★</title>
+<link rel="stylesheet" href="../css/header.css">
 <style>
-
+	.box {
+		width: 70%;
+		margin: 0 auto;
+		margin-bottom: 200px;
+	}
+	
+	.number {
+		width: 25px;
+		height: 25px;
+		border-radius: 50%;
+		background-color: #7CFC00;
+		display: inline-block;
+		text-align: center;
+		font-weight: bold;
+		margin-right: 20px;
+		padding-top: 2px;
+	}
+	
+	.subtitle {
+		display: inline-block;
+		font-weight: bold;
+	}
 </style>
 </head>
 <body>
-	<form action="/board/write" th:object="${board}" method="post" id="form" enctype="multipart/form-data">
-		<p><span>1</span><span>프로젝트의 정보를 입력하세요.</span></p>
-		<div class="setContainer">
-			<select name="boardcategory">
-				<option value="project">프로젝트</option>
-				<option value="study">스터디</option>
-				<option value="volunteer">지원자</option>
-			</select>
-			<select name="boardmembers">
-				<option value="1">1명</option>
-				<option value="2">2명</option>
-				<option value="3">3명</option>
-				<option value="4">4명</option>
-				<option value="5">5명</option>
-				<option value="6">6명</option>
-				<option value="7">7명</option>
-				<option value="8">8명</option>
-				<option value="9">9명</option>
-				<option value="10">10명이상</option>
-			</select>
-			<select name="boardmeet">
-				<option value="off">오프라인</option>
-				<option value="on">온라인</option>
-			</select>
-			<select name="boardperiod">
-				<option value="1">1개월</option>
-				<option value="2">2개월</option>
-				<option value="3">3개월</option>
-				<option value="4">4개월</option>
-				<option value="5">5개월</option>
-				<option value="6">6개월이상</option>
-			</select>
-			<select name="boardskill">
-				<option th:each="list : ${skillList}" th:text="${list.skillname}" th:value="${list.skillname}"></option>
-			</select>
-			<input type="date" name="boardstart" th:field="*{boardstart}"/>
-			<select name="boardcommunication">
-				<option value="kakao">오픈채팅</option>
-				<option value="email">이메일</option>
-				<option value="phone">전화or문자</option>
-			</select>
-			<input type="text" name="boardway" th:field="*{boardway}"/>
-		</div>
-
-
-    	<p><span>2</span><span>프로젝트 또는 자신을 소개해주세요.</span></p>
-    
-    	제목 : <input type="text" name="boardtitle" th:field="*{boardtitle}"/>
-      	<div id="smarteditor">
-        	<textarea name="editorTxt" id="editorTxt" 
-                  rows="20" cols="10" 
-                  placeholder="내용을 입력해주세요"
-                  style="width: 500px"></textarea>
-      	</div>
-      	<input type="hidden" id="boardcontent" name="boardcontent"/>
-     	<input type="button" value="제출" onclick="submitPost()"/>
-     	<input type="submit" style="display:none"/>
-    </form>
+	<div th:replace="~{header :: header}"></div>
+	<div class="box">
+		<form action="/board/write" th:object="${board}" method="post" id="form" enctype="multipart/form-data">
+			<p><span class="number">1</span><span class="subtitle">프로젝트(스터디)의 정보를 입력해주세요.</span></p>
+			<div class="setContainer">
+				<select name="boardcategory">
+					<option value="project">프로젝트</option>
+					<option value="study">스터디</option>
+					<option value="volunteer">지원자</option>
+				</select>
+				<select name="boardmembers">
+					<option value="1">1명</option>
+					<option value="2">2명</option>
+					<option value="3">3명</option>
+					<option value="4">4명</option>
+					<option value="5">5명</option>
+					<option value="6">6명</option>
+					<option value="7">7명</option>
+					<option value="8">8명</option>
+					<option value="9">9명</option>
+					<option value="10">10명이상</option>
+				</select>
+				<select name="boardmeet">
+					<option value="off">오프라인</option>
+					<option value="on">온라인</option>
+				</select>
+				<select name="boardperiod">
+					<option value="1">1개월</option>
+					<option value="2">2개월</option>
+					<option value="3">3개월</option>
+					<option value="4">4개월</option>
+					<option value="5">5개월</option>
+					<option value="6">6개월이상</option>
+				</select>
+				<select name="boardskill">
+					<option th:each="list : ${skillList}" th:text="${list.skillname}" th:value="${list.skillname}"></option>
+				</select>
+				<input type="date" name="boardstart" th:field="*{boardstart}"/>
+				<select name="boardcommunication">
+					<option value="kakao">오픈채팅</option>
+					<option value="email">이메일</option>
+					<option value="phone">전화or문자</option>
+				</select>
+				<input type="text" name="boardway" th:field="*{boardway}"/>
+			</div>
+	
+	
+	    	<p><span class="number">2</span><span class="subtitle">프로젝트 또는 자신을 소개해주세요.</span></p>
+	    
+	    	제목 : <input type="text" name="boardtitle" th:field="*{boardtitle}"/>
+	      	<div id="smarteditor">
+	        	<textarea name="editorTxt" id="editorTxt" 
+	                  rows="20" cols="10" 
+	                  placeholder="내용을 입력해주세요"
+	                  style="width: 500px"></textarea>
+	      	</div>
+	      	<input type="hidden" id="boardcontent" name="boardcontent"/>
+	     	<input type="button" value="제출" onclick="submitPost()"/>
+	     	<input type="submit" style="display:none"/>
+	    </form>
+    </div>
 </body>
 <script type="text/javascript" src="/smarteditor/js/HuskyEZCreator.js" charset="utf-8"></script>
 <script>
