--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>★SPACE★</title>
 <link rel="stylesheet" href="../css/main.css">
-<link rel="stylesheet" href="../css/index.css">
+<link rel="stylesheet" href="../css/header.css">
 <style>
 
 	
