--- a/src/main/resources/templates/board/boardWrite.html
+++ b/src/main/resources/templates/board/boardWrite.html
@@ -4,11 +4,16 @@
 <meta charset="UTF-8">
 <title>★SPACE★</title>
 <link rel="stylesheet" href="../css/header.css">
+<link rel="stylesheet" href="../css/main.css">
 <style>
 	.box {
-		width: 70%;
+		width: 60%;
 		margin: 0 auto;
 		margin-bottom: 200px;
+	}
+	
+	.setContainer {
+		margin-top: 20px;
 	}
 	
 	.number {
@@ -26,74 +31,217 @@
 	.subtitle {
 		display: inline-block;
 		font-weight: bold;
+		font-size: 20px;
+		margin-bottom: 30px;
+	}
+	
+	.exbox {
+		width: 80%;
+		height: 150px;
+		margin: 0 auto;
+	}
+	
+	.exbox div {
+		width: 48%;
+	}
+	
+	.ex {
+		width: 150px;
+		margin: 5px;
+	}
+	
+	.date, .add {
+		width: 100%;
+		height: 50px;
+		font-size: 20px;
+		font-weight: bold;
+		color: silver;
+	}
+	
+	select {
+		width: 100%;
+		height: 50px;
+		font-size: 20px;
+		font-weight: bold;
+		color: silver;
+	}
+	
+	
+	
+	.boardtitleinput {
+		width: 100%;
+		height: 50px;
+		margin-top: 10px;
+		margin-bottom: 20px;
+		font-size: 20px;
+	}
+	
+	.boardtitle {
+		width: 20%;
+		font-size: 18px;
+	}
+	
+	.wbox {
+		width: 100%;
+		margin: 0 auto;
+		margin-top: 15px;
+	}
+	
+	.buttonbox {
+		width: 100%;
+	}
+	
+	.button {
+		width: 100px;
+		height: 50px;
+		float: right;
+		font-size: 20px;
+		margin: 5px;
 	}
 </style>
 </head>
 <body>
 	<div th:replace="~{header :: header}"></div>
 	<div class="box">
-		<form action="/board/write" th:object="${board}" method="post" id="form" enctype="multipart/form-data">
+		<form action="/board/write" th:object="${board}" method="post" id="form" enctype="multipart/form-data"
+		 name="sendform" onsubmit="return sendmoim()">
 			<p><span class="number">1</span><span class="subtitle">프로젝트(스터디)의 정보를 입력해주세요.</span></p>
+			<hr>
 			<div class="setContainer">
-				<select name="boardcategory">
-					<option value="project">프로젝트</option>
-					<option value="study">스터디</option>
-					<option value="volunteer">지원자</option>
-				</select>
-				<select name="boardmembers">
-					<option value="1">1명</option>
-					<option value="2">2명</option>
-					<option value="3">3명</option>
-					<option value="4">4명</option>
-					<option value="5">5명</option>
-					<option value="6">6명</option>
-					<option value="7">7명</option>
-					<option value="8">8명</option>
-					<option value="9">9명</option>
-					<option value="10">10명이상</option>
-				</select>
-				<select name="boardmeet">
-					<option value="off">오프라인</option>
-					<option value="on">온라인</option>
-				</select>
-				<select name="boardperiod">
-					<option value="1">1개월</option>
-					<option value="2">2개월</option>
-					<option value="3">3개월</option>
-					<option value="4">4개월</option>
-					<option value="5">5개월</option>
-					<option value="6">6개월이상</option>
-				</select>
-				<select name="boardskill">
-					<option th:each="list : ${skillList}" th:text="${list.skillname}" th:value="${list.skillname}"></option>
-				</select>
-				<input type="date" name="boardstart" th:field="*{boardstart}"/>
-				<select name="boardcommunication">
-					<option value="kakao">오픈채팅</option>
-					<option value="email">이메일</option>
-					<option value="phone">전화or문자</option>
-				</select>
-				<input type="text" name="boardway" th:field="*{boardway}"/>
+			
+				<div class="exbox box1">
+					<div class="inline-block">
+						<span class="ex block">모집 구분</span>
+						<select name="boardcategory">
+							<option value="project">프로젝트</option>
+							<option value="study">스터디</option>
+							<option value="volunteer">지원자</option>
+						</select>
+					</div>
+					
+					<div class="inline-block">
+						<span class="ex block">인원</span>
+						<select name="boardmembers">
+							<option value="1">1명</option>
+							<option value="2">2명</option>
+							<option value="3">3명</option>
+							<option value="4">4명</option>
+							<option value="5">5명</option>
+							<option value="6">6명</option>
+							<option value="7">7명</option>
+							<option value="8">8명</option>
+							<option value="9">9명</option>
+							<option value="10">10명이상</option>
+						</select>
+					</div>	
+				</div>
+				
+				<div class="exbox box2">
+					<div class="inline-block">
+						<span class="ex block">진행 방식</span>
+						<select name="boardmeet">
+							<option value="off">오프라인</option>
+							<option value="on">온라인</option>
+						</select>
+					</div>
+					
+					<div class="inline-block">
+						<span class="ex block">프로젝트 기간</span>
+						<select name="boardperiod">
+							<option value="1">기간미정</option>
+							<option value="1">1개월</option>
+							<option value="2">2개월</option>
+							<option value="3">3개월</option>
+							<option value="4">4개월</option>
+							<option value="5">5개월</option>
+							<option value="6">6개월이상</option>
+						</select>
+					</div>
+				</div>
+				
+				<div class="exbox box3">
+					<div class="inline-block">
+						<span class="ex block">주요 기술</span>
+						<select name="boardskill">
+							<option th:each="list : ${skillList}" th:text="${list.skillname}" th:value="${list.skillname}"></option>
+						</select>
+					</div>
+						
+					<div class="inline-block">
+						<span class="ex block">시작일</span>
+						<input class="date block" type="date" name="boardstart" th:field="*{boardstart}"/>
+					</div>
+				</div>
+				
+				<div class="exbox box4">
+					<div class="inline-block">
+						<span class="ex block">소통 방법</span>
+						<select name="boardcommunication">
+							<option value="kakao">오픈채팅</option>
+							<option value="email">이메일</option>
+							<option value="phone">전화or문자</option>
+						</select>
+					</div>
+				
+					<div class="inline-block">
+						<span class="ex block">주소를 입력해주세요</span>
+						<input class="add block" type="text" name="boardway" th:field="*{boardway}"/>
+					</div>
+				</div>
 			</div>
-	
-	
-	    	<p><span class="number">2</span><span class="subtitle">프로젝트 또는 자신을 소개해주세요.</span></p>
-	    
-	    	제목 : <input type="text" name="boardtitle" th:field="*{boardtitle}"/>
-	      	<div id="smarteditor">
-	        	<textarea name="editorTxt" id="editorTxt" 
-	                  rows="20" cols="10" 
-	                  placeholder="내용을 입력해주세요"
-	                  style="width: 500px"></textarea>
-	      	</div>
-	      	<input type="hidden" id="boardcontent" name="boardcontent"/>
-	     	<input type="button" value="제출" onclick="submitPost()"/>
-	     	<input type="submit" style="display:none"/>
+
+			<div class="setContainer">
+		    	<p><span class="number">2</span><span class="subtitle">프로젝트 또는 자신을 소개해주세요.</span></p>
+		    	<hr>
+		    	
+		    	<div class="wbox">
+		    		<span class="boardtitle">제목</span><input class="boardtitleinput" type="text" name="boardtitle" th:field="*{boardtitle}"/>
+		    	</div>
+		    	<div class="wbox">
+			      	<div id="smarteditor">
+			        	<textarea name="editorTxt" id="editorTxt" 
+			                  rows="20" cols="10" 
+			                  placeholder="내용을 입력해주세요"
+			                  style="width: 500px"></textarea>
+			      	</div>
+			      	<div class="buttonbox">
+				      	<input type="hidden" id="boardcontent" name="boardcontent"/>
+				      	<button class="button">작성 취소</button>
+				     	<input class="button" type="button" value="등록" onclick="submitPost()"/>
+				     	<input type="submit" style="display:none"/>
+			     	</div>
+		     	</div>
+	     	</div>
 	    </form>
     </div>
 </body>
 <script type="text/javascript" src="/smarteditor/js/HuskyEZCreator.js" charset="utf-8"></script>
 <script>
+
+function sendmoim(){
+	let sendform = document.sendform;
+	let start = sendform.boardstart;
+	
+	// 오늘 날짜
+	let today = new Date();   
+	let year = today.getFullYear(); 	// 년도
+	let month = today.getMonth() + 1;  	// 월
+	let date = today.getDate();  		// 날짜
+	
+	let startYear = start.value.substr(0, 4); // 시작날짜 연도
+	let startMonth = start.value.substr(5, 2); // 시작날짜 월
+	let startDay = start.value.substr(8, 2); // 시작날짜 일
+	
+	let todate = new Date(year, month, date);
+	let startdate = new Date(startYear, startMonth, startDay);
+
+	if(todate > startdate){
+		alert("모임이 시작하는 날짜를 다시 확인해주세요.");
+		return false;
+	}
+	return true;
+}
+
     let oEditors = []
 	let boardcontent = document.getElementById("boardcontent");
     smartEditor = function() {
